# Prototype_Checklist

./: .env  .gitignore  hello.py  pyproject.toml
Code/: case_discussion.ipynb  find_canonical_dx.ipynb  prepare_cases.py  test.ipynb  utils.py
Code/Data/dsm5_criteria.lance/dsm5_criteria.lance/_transactions/: 0-24129b55-c91f-464f-a128-2b36900ca9fd.txn  1-42dafb99-5050-435a-8add-002bc1f15b64.txn
Code/Data/dsm5_criteria.lance/dsm5_criteria.lance/_versions/: 1.manifest  2.manifest
Code/Data/dsm5_criteria.lance/dsm5_criteria.lance/data/: 98f07ccd-c72a-4b87-98ff-af5d91097981.lance
Data/: DSM-5-TR Clinical Cases.json  DSM-5-TR Clinical Cases.md  SPR.md
Old_codes/: 01.ipynb  02.ipynb  03.ipynb  DSM_codes.csv  Function calling not working.ipynb  Function_Call_with_Langchain_Tool.ipynb  Getting Started.ipynb  OAI_CONFIG_LIST  ORCA_CONFIG_LIST  app.py  discussion.txt  discussion2.txt  dsm_5.json  extract_dsm_criteria.ipynb
Old_codes/coding/: calculate_ytd_gain.py  get_current_date.py
Old_codes/db/: chroma.sqlite3
Old_codes/notebook/: DSM_codes.txt  OAI_CONFIG_LIST  agentchat_RetrieveChat.ipynb  agentchat_groupchat_research.ipynb  agentchat_human_feedback.ipynb  agentchat_langchain.ipynb  agentchat_langchain2.ipynb  dsm_5.json
Old_codes/notebook/.cache/41/: cache.db
Old_codes/notebook/.cache/42/: cache.db
