[project]
name = "prototype-checklist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lancedb>=0.15.0",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-core>=0.3.18",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.8",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "ipywidgets>=8.1.5",
    "jupyterlab-widgets>=3.0.13",
    "pymupdf4llm>=0.0.17",
    "langgraph>=0.2.50",
]
